force-app/main/default/objects/Credit_Card_Error__c/Credit_Card_Error__c.object-meta.xml
<CustomObject>
    <label>Credit Card Error</label>
    <nameField>
        <displayFormat>CE-{0000000}</displayFormat>
        <label>Credit Card Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Card Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>