force-app/main/default/objects/Credit_Card_Error__c/fields/Failure_Code__c.field-meta.xml
<CustomField>
    <fullName>Failure_Code__c</fullName>
    <label>Failure Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>