force-app/main/default/objects/Credit_Card_Error__c/fields/Failure_Field__c.field-meta.xml
<CustomField>
    <fullName>Failure_Field__c</fullName>
    <label>Failure Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>