force-app/main/default/objects/Credit_Card_Error__c/fields/Failure_Message__c.field-meta.xml
<CustomField>
    <fullName>Failure_Message__c</fullName>
    <label>Failure Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>